# voxis

./: .gitignore  AGENTS.md  ARCHITECT.md  DESIGN.md  LICENSE  MEMORY.md  README.md  REQUIREMENT.md  index.html  package-lock.json  package.json
.github/workflows/: build.yml
memory/: ralph-loop-state.json
scripts/: download-model.sh  ralph-loop.sh
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio.rs  hotkey.rs  inject.rs  lib.rs  main.rs  polish.rs  settings.rs  whisper.rs
